test/Fail/Issue4755b.err
Issue4755b.agda:17.13-16: warning: -W[no]RewriteVariablesBoundMoreThanOnce
rew  is not a legal rewrite rule, since the following parameters are bound more than once on the left hand side:  A. Perhaps you can use a postulate instead of a constructor as the head symbol?
when checking the pragma REWRITE rew

Issue4755b.agda:20.8-12: error: [UnequalTerms]
c tt (box ⊤) != one of type D ⊤
when checking that the expression refl has type c tt (box ⊤) ≡ one
